--- a/Fonlow.Testing.Service/Fonlow.Testing.Service.csproj
+++ b/Fonlow.Testing.Service/Fonlow.Testing.Service.csproj
@@ -29,6 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\FonlowTesting.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -51,6 +57,9 @@
     <Compile Include="TearUpAndDownFixture.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\FonlowTesting.snk">
+      <Link>Properties\FonlowTesting.snk</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
