--- a/Fonlow.Testing.Service/Fonlow.Testing.Service.nuspec
+++ b/Fonlow.Testing.Service/Fonlow.Testing.Service.nuspec
@@ -2,17 +2,19 @@
 <package >
   <metadata>
     <id>Fonlow.Testing.Service</id>
-    <version>2.0.0.0</version>
-    <title>Setup and teardown of service resources in unit testing with xUnit</title>
+    <version>$version$</version>
+    <title>Fonlow.Testing.Service for setting up Web service resources</title>
     <authors>Zijian Huang</authors>
     <owners>Zijian Huang</owners>
-    <licenseUrl>https://opensource.org/licenses/MS-RL</licenseUrl>
+    <licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
     <projectUrl>https://www.fonlow.com</projectUrl>
     <iconUrl>https://www.fonlow.com</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>xUnit fixtures for integration testing.</description>
+    <description>Setup and teardown of service resources in unit testing and integration testing.</description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright © Fonlow 2015-2016</copyright>
-    <tags>xUnit Nunit MsTest unittesting iisexpress iis</tags>
+    <tags>xunit nunit mstest unittesting iisexpress iis</tags>
+     <dependencies>
+    </dependencies>	
   </metadata>
 </package>
