--- a/Fonlow.Testing/Fonlow.Testing.csproj
+++ b/Fonlow.Testing/Fonlow.Testing.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8F40F160-D999-4EE8-92C7-DFB335D65167}</ProjectGuid>
+    <ProjectGuid>{CEB26F8F-EFA7-4307-A482-2EC253A47404}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Fonlow.Testing.Service</RootNamespace>
-    <AssemblyName>Fonlow.Testing.Service</AssemblyName>
+    <RootNamespace>Fonlow.Testing</RootNamespace>
+    <AssemblyName>Fonlow.Testing</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -37,9 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,15 +49,15 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="IisExpressAgent.cs" />
-    <Compile Include="IisFixture.cs" />
+    <Compile Include="PermissionPrincipalFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetupAndDownFixture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\FonlowTesting.snk">
       <Link>Properties\FonlowTesting.snk</Link>
     </None>
-    <None Include="Fonlow.Testing.Service.nuspec" />
+    <None Include="Fonlow.Testing.nuspec" />
     <None Include="PackNupkg.bat" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
