--- a/Fonlow.Testing.Service/Fonlow.Testing.Service.nuspec
+++ b/Fonlow.Testing.Service/Fonlow.Testing.Service.nuspec
@@ -11,7 +11,7 @@
     <iconUrl>https://www.fonlow.com</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Setup and teardown of service resources in unit testing and integration testing.</description>
-    <releaseNotes>Initial release</releaseNotes>
+    <releaseNotes>For VS 2015 update 2, the path to applicationhost.config could be found through Testing_SlnRoot="SLN_ROOT_.VS"</releaseNotes>
     <copyright>Copyright © Fonlow 2015-2016</copyright>
     <tags>xunit nunit mstest unittesting iisexpress iis</tags>
      <dependencies>
