--- a/IntegrationTests/App.config
+++ b/IntegrationTests/App.config
@@ -8,7 +8,7 @@
     <add key="Testing_UseIisExpress" value="True" />
     <add key="Testing_HostSite" value="Fonlow.DemoService" />
     <add key="Testing_HostSiteApplicationPool" value="Clr4IntegratedAppPool" />
-    <add key="Testing_SlnRoot" value="C:\VSProjects\FonlowTesting" />
+    <add key="Testing_SlnRoot" value="SLN_ROOT_.VS" />
     <add key="Testing_BaseUrl" value="http://localhost:4060/" />
     <!-- #endif -->
   </appSettings>
