--- a/IntegrationTests/App.config
+++ b/IntegrationTests/App.config
@@ -1,24 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <!-- #ifdef _xml_preprocess -->
     <!--
     -->
     <!-- #else -->
-    <add key="Testing_UseIisExpress" value="True" />
-    <add key="Testing_HostSite" value="Fonlow.DemoService" />
-    <add key="Testing_HostSiteApplicationPool" value="Clr4IntegratedAppPool" />
-    <add key="Testing_SlnRoot" value="SLN_ROOT_.VS" />
-    <add key="Testing_BaseUrl" value="http://localhost:4060/" />
+    <add key="Testing_UseIisExpress" value="True"/>
+    <add key="Testing_HostSite" value="Fonlow.DemoService"/>
+    <add key="Testing_HostSiteApplicationPool" value="Clr4IntegratedAppPool"/>
+    <add key="Testing_SlnRoot" value="SLN_ROOT_.VS"/>
+    <add key="Testing_SlnName" value="FonlowTesting"/>
+    <add key="Testing_BaseUrl" value="http://localhost:4060/"/>
     <!-- #endif -->
   </appSettings>
 
   <system.net>
     <!--Used by http client components. If enabled=true, the first connection might take a few seconds as the client tries to locate proxy.-->
     <defaultProxy enabled="true">
-      <proxy bypassonlocal="False" usesystemdefault="True" />
-      <bypasslist />
-      <module />
+      <proxy bypassonlocal="False" usesystemdefault="True"/>
+      <bypasslist/>
+      <module/>
     </defaultProxy>
 
     <connectionManagement>
@@ -27,4 +28,4 @@
     </connectionManagement>
   </system.net>
 
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
