--- a/Fonlow.Testing.Http/Fonlow.Testing.Http.nuspec
+++ b/Fonlow.Testing.Http/Fonlow.Testing.Http.nuspec
@@ -11,8 +11,8 @@
     <iconUrl>https://www.fonlow.com</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Setup http client resources</description>
-    <releaseNotes>Give more specific warning and advise to test runner through throwing InvalidOperationException when connection with Web dependencies is having problems.</releaseNotes>
-    <copyright>Copyright © Fonlow 2015-2016</copyright>
+    <releaseNotes>Give more specific warning and advise to test runner through throwing InvalidOperationException when connection with Web dependencies is having problems. Upgraded to .NET Framework 4.5.2</releaseNotes>
+    <copyright>Copyright © Fonlow 2015-2019</copyright>
     <tags>xunit nunit mstest unittesting iisexpress iis webapi restful</tags>
      <dependencies>
     </dependencies>	
