--- a/Fonlow.Testing.Http/Fonlow.Testing.Http.csproj
+++ b/Fonlow.Testing.Http/Fonlow.Testing.Http.csproj
@@ -54,7 +54,9 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="HttpClientFixture.cs" />
+    <Compile Include="DefaultHttpClient.cs" />
+    <Compile Include="DefaultHttpClientWithUsername.cs" />
+    <Compile Include="HttpClientWithUsername.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
