--- a/Fonlow.Testing.Http/Fonlow.Testing.Http.csproj
+++ b/Fonlow.Testing.Http/Fonlow.Testing.Http.csproj
@@ -51,12 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Fonlow.Testing.HttpCore\HttpClientWithUsername.cs">
+      <Link>HttpClientWithUsername.cs</Link>
+    </Compile>
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="DefaultHttpClient.cs" />
     <Compile Include="DefaultHttpClientWithUsername.cs" />
-    <Compile Include="HttpClientWithUsername.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
