--- a/Fonlow.Testing.ServiceCore/Fonlow.Testing.ServiceCore.csproj
+++ b/Fonlow.Testing.ServiceCore/Fonlow.Testing.ServiceCore.csproj
@@ -21,4 +21,6 @@
     <ProjectReference Include="..\Fonlow.Testing.HttpCore\Fonlow.Testing.HttpCore.csproj" />
   </ItemGroup>
 
+  <Import Project="..\Fonlow.Testing.ServiceShared\Fonlow.Testing.ServiceShared.projitems" Label="Shared" />
+
 </Project>
