--- a/Fonlow.Testing.Http/Fonlow.Testing.Http.csproj
+++ b/Fonlow.Testing.Http/Fonlow.Testing.Http.csproj
@@ -51,15 +51,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Fonlow.Testing.HttpCore\HttpClientWithUsername.cs">
-      <Link>HttpClientWithUsername.cs</Link>
-    </Compile>
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="DefaultHttpClient.cs" />
-    <Compile Include="DefaultHttpClientWithUsername.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestingSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\FonlowTesting.snk">
@@ -69,6 +65,7 @@
     <None Include="packages.config" />
     <None Include="PackNupkg.bat" />
   </ItemGroup>
+  <Import Project="..\Fonlow.Testing.HttpShared\Fonlow.Testing.HttpShared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
