--- a/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
+++ b/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
@@ -18,4 +18,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+  <Import Project="..\Fonlow.Testing.HttpShared\Fonlow.Testing.HttpShared.projitems" Label="Shared" />
+
 </Project>
