--- a/Fonlow.Testing.Service/Fonlow.Testing.Service.csproj
+++ b/Fonlow.Testing.Service/Fonlow.Testing.Service.csproj
@@ -52,9 +52,6 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="DirFunctions.cs" />
-    <Compile Include="IisExpressAgent.cs" />
-    <Compile Include="IisFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +61,13 @@
     <None Include="Fonlow.Testing.Service.nuspec" />
     <None Include="PackNupkg.bat" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Fonlow.Testing.Http\Fonlow.Testing.Http.csproj">
+      <Project>{279819ff-2567-4021-9164-b419c690b547}</Project>
+      <Name>Fonlow.Testing.Http</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <Import Project="..\Fonlow.Testing.ServiceShared\Fonlow.Testing.ServiceShared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
