--- a/Fonlow.Testing.Service/Fonlow.Testing.Service.nuspec
+++ b/Fonlow.Testing.Service/Fonlow.Testing.Service.nuspec
@@ -10,10 +10,13 @@
     <projectUrl>https://github.com/zijianhuang/FonlowTesting</projectUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Setup and teardown of service resources in unit testing and integration testing.</description>
-    <releaseNotes>For VS 2019 update 2, the path to applicationhost.config could be found through Testing_SlnRoot="SLN_ROOT_.VS" and Testing_SlnName="YourSlnNameWithoutFileExtension". Upgraded to .NET Framework 4.5.2.</releaseNotes>
+    <releaseNotes>Support launching .NET Core services</releaseNotes>
     <copyright>Copyright © Fonlow 2015-2019</copyright>
     <tags>xunit nunit mstest unittesting iisexpress iis</tags>
      <dependencies>
-    </dependencies>	
+       <group>
+         <dependency id="Fonlow.Testing.Http" version="1.1.0" />
+       </group>
+     </dependencies>	
   </metadata>
 </package>
