--- a/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
+++ b/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
@@ -6,18 +6,20 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>Zijian Huang</Authors>
     <Description>Setup http client resources</Description>
-    <Copyright>Copyright © Fonlow 2015-2019</Copyright>
+    <Copyright>Copyright © Fonlow 2015-2020</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/zijianhuang/FonlowTesting</PackageProjectUrl>
     <PackageTags>xunit nunit mstest unittesting iisexpress iis webapi restful dotnet</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
+    <Version>1.1</Version>
+    <AssemblyVersion>1.1.1.0</AssemblyVersion>
+    <FileVersion>1.1.1.0</FileVersion>
+    <PackageReleaseNotes>Ignore invalid SSL certificate.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
-
-  <Import Project="..\Fonlow.Testing.HttpShared\Fonlow.Testing.HttpShared.projitems" Label="Shared" />
 
 </Project>
