--- a/DemoCoreWeb/DemoCoreWeb.csproj
+++ b/DemoCoreWeb/DemoCoreWeb.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fonlow.WebApiClientGenCore" Version="3.12.0" />
+    <PackageReference Include="Fonlow.WebApiClientGenCore" Version="5.3.0" />
   </ItemGroup>
 
 </Project>
