--- a/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
+++ b/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
@@ -1,25 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>Zijian Huang</Authors>
     <Description>Setup http client resources</Description>
-    <Copyright>Copyright © Fonlow 2015-2020</Copyright>
+    <Copyright>Copyright © Fonlow 2015-2021</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/zijianhuang/FonlowTesting</PackageProjectUrl>
     <PackageTags>xunit nunit mstest unittesting iisexpress iis webapi restful dotnet</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>1.1.2</Version>
-    <AssemblyVersion>1.1.2.0</AssemblyVersion>
-    <FileVersion>1.1.2.0</FileVersion>
+    <Version>2.0.1</Version>
+    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <FileVersion>2.0.1.0</FileVersion>
     <PackageReleaseNotes>Ignore invalid SSL certificate.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.7" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
