--- a/Fonlow.DemoService/Web.config
+++ b/Fonlow.DemoService/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
@@ -12,10 +12,9 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6.2"/>
+    <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.5"/>
-    <httpModules>
-    </httpModules>
+    <httpModules/>
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -34,8 +33,7 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true">
-    </modules>
+    <modules runAllManagedModulesForAllRequests="true"/>
     <!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
