--- a/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
+++ b/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
@@ -1,21 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>Zijian Huang</Authors>
     <Description>Setup http client resources</Description>
-    <Copyright>Copyright © Fonlow 2015-2022</Copyright>
+    <Copyright>Copyright © Fonlow 2015-2023</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/zijianhuang/FonlowTesting</PackageProjectUrl>
     <PackageTags>xunit nunit mstest unittesting iisexpress iis webapi restful dotnet</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>2.2.1</Version>
-    <PackageReleaseNotes>HttpMessageHandler supported.</PackageReleaseNotes>
+    <Version>3.0</Version>
+    <PackageReleaseNotes>upgraded to .NET 7. And support multiple client user credentials with class AuthHttpClients.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
