--- a/IntegrationTestsCore/appsettings.json
+++ b/IntegrationTestsCore/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
 	"Testing": {
-		"BaseUrl": "http://localhost:5000/",
-		"DotNetServiceAssemblyPath": "..\\..\\..\\..\\DemoCoreWeb\\bin\\Debug\\netcoreapp3.0\\DemoCoreWeb.dll"
+		"baseUrl": "http://localhost:5000/",
+		"DotNetServiceAssemblyPath": "..\\..\\..\\..\\DemoCoreWeb\\bin\\Debug\\net7.0\\DemoCoreWeb.dll"
 
 	}
 }
