--- a/Tests/WebApiTestsCore/WebApiTestsCore.csproj
+++ b/Tests/WebApiTestsCore/WebApiTestsCore.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
@@ -30,9 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DemoCoreWeb.ClientApi\DemoCoreWeb.ClientApi.csproj" />
-    <ProjectReference Include="..\Fonlow.Testing.HttpCore\Fonlow.Testing.HttpCore.csproj" />
-    <ProjectReference Include="..\Fonlow.Testing.ServiceCore\Fonlow.Testing.ServiceCore.csproj" />
+    <ProjectReference Include="..\..\Fonlow.Testing.HttpCore\Fonlow.Testing.HttpCore.csproj" />
+    <ProjectReference Include="..\..\Fonlow.Testing.ServiceCore\Fonlow.Testing.ServiceCore.csproj" />
   </ItemGroup>
 
 </Project>
