--- a/Tests/IntegrationTestsCore/IntegrationTestsCore.csproj
+++ b/Tests/IntegrationTestsCore/IntegrationTestsCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -33,6 +33,12 @@
     <ProjectReference Include="..\..\DemoCoreWeb.ClientApi\DemoCoreWeb.ClientApi.csproj" />
     <ProjectReference Include="..\..\Fonlow.Testing.HttpCore\Fonlow.Testing.HttpCore.csproj" />
     <ProjectReference Include="..\..\Fonlow.Testing.ServiceCore\Fonlow.Testing.ServiceCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
