any host address

--- a/DemoCoreWeb/appsettings.json
+++ b/DemoCoreWeb/appsettings.json
@@ -9,6 +9,14 @@
 	"AllowedHosts": "*",
 
 	"appSettings": {
-		"Demo":  "OK"
+		"Demo": "OK"
+	},
+
+	"Kestrel": {
+		"Endpoints": {
+			"Http": {
+				"Url": "http://*:5000"
+			}
+		}
 	}
 }
