--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Check Ports
       run: ss -lntu
     - name: Open Port 5000
-      run: netstat -na | grep :4000
+      run: sudo ufw allow 5000
     - name: Test
       run: dotnet test --no-build --verbosity normal
