--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,9 +24,9 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Run DemoCoreWeb
-      run: pwsh ./StartCoreWebApi.ps1
-    - name: Check Ports
-      run: netstat -lntu
+#    - name: Run DemoCoreWeb
+#      run: pwsh ./StartCoreWebApi.ps1
+#    - name: Check Ports
+#      run: netstat -lntu
     - name: Test
       run: dotnet test --no-build --verbosity normal
