test for release build

--- a/.github/workflows/dotnetRelease.yml
+++ b/.github/workflows/dotnetRelease.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore --configuration Release
 #    - name: Run DemoCoreWeb
 #      run: pwsh ./StartCoreWebApi.ps1
 #    - name: Check Ports
 #      run: netstat -lntu
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal --configuration Release
