--- a/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
+++ b/Fonlow.Testing.HttpCore/Fonlow.Testing.HttpCore.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<Authors>Zijian Huang</Authors>
 		<Description>Setup http client resources</Description>
@@ -10,8 +10,8 @@
 		<PackageProjectUrl>https://github.com/zijianhuang/FonlowTesting</PackageProjectUrl>
 		<PackageTags>xunit nunit mstest unittesting iisexpress iis webapi restful dotnet</PackageTags>
 		<NeutralLanguage>en</NeutralLanguage>
-		<Version>3.5.1</Version>
-		<PackageReleaseNotes>Upgraded to .NET 8.</PackageReleaseNotes>
+		<Version>3.6</Version>
+		<PackageReleaseNotes>.NET 9</PackageReleaseNotes>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<AnalysisLevel>latest-all</AnalysisLevel>
 	</PropertyGroup>
