--- a/Fonlow.Testing.Integration/Fonlow.Testing.Integration.csproj
+++ b/Fonlow.Testing.Integration/Fonlow.Testing.Integration.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<Version>1.1</Version>
+		<TargetFramework>net9.0</TargetFramework>
+		<Version>1.2</Version>
 		<Authors>Zijian Huang</Authors>
 		<Description>Utilities and fixtures for integration testing with xUnit</Description>
-		<PackageReleaseNotes></PackageReleaseNotes>
+		<PackageReleaseNotes>.NET 9</PackageReleaseNotes>
 		<Copyright>Copyright © Fonlow 2015-$([System.DateTime]::Now.Year)</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zijianhuang/FonlowTesting</PackageProjectUrl>
